Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -116,6 +116,7 @@ export(set_edge_attr_ws)
 export(set_global_graph_attr)
 export(set_graph_name)
 export(set_graph_time)
+export(set_graph_undirected)
 export(set_node_attr)
 export(set_node_attr_ws)
 export(subset_series)
