--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ export(render_graph_from_series)
 export(replace_in_spec)
 export(rescale_edge_attr_ws)
 export(rescale_node_attr_ws)
+export(reverse_edge_direction)
 export(select_edges)
 export(select_edges_by_node_id)
 export(select_last_edge)
