Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,6 +89,7 @@ export(invert_selection)
 export(is_graph_connected)
 export(is_graph_directed)
 export(is_graph_empty)
+export(join_node_attrs)
 export(mermaid)
 export(node_count)
 export(node_info)
