Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(add_edges_from_table)
 export(add_n_nodes)
 export(add_n_nodes_from_selection)
 export(add_n_nodes_to_selection)
+export(add_n_nodes_ws)
 export(add_node)
 export(add_node_df)
 export(add_nodes_from_table)
