--- a/NAMESPACE
+++ b/NAMESPACE
@@ -122,6 +122,7 @@ export(set_graph_undirected)
 export(set_node_attr)
 export(set_node_attr_ws)
 export(subset_series)
+export(to_igraph)
 export(trav_both)
 export(trav_in)
 export(trav_in_edge)
@@ -137,6 +138,7 @@ import(htmlwidgets)
 import(rsvg)
 import(scales)
 importFrom(grDevices,colors)
+importFrom(igraph,graph_from_data_frame)
 importFrom(rstudioapi,isAvailable)
 importFrom(stringr,str_count)
 importFrom(stringr,str_detect)
