--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,8 @@ export(add_balanced_tree)
 export(add_cycle)
 export(add_edge)
 export(add_edge_df)
-export(add_edges)
 export(add_edges_from_table)
+export(add_edges_w_string)
 export(add_n_nodes)
 export(add_n_nodes_ws)
 export(add_node)
