Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,11 +17,11 @@ export(add_path)
 export(add_prism)
 export(add_star)
 export(add_to_series)
-export(cache_edge_attr)
-export(cache_edge_attr_ws)
+export(cache_edge_attrs)
+export(cache_edge_attrs_ws)
 export(cache_edge_count_ws)
-export(cache_node_attr)
-export(cache_node_attr_ws)
+export(cache_node_attrs)
+export(cache_node_attrs_ws)
 export(cache_node_count_ws)
 export(clear_selection)
 export(combine_edges)
@@ -59,16 +59,16 @@ export(get_common_nbrs)
 export(get_connected_components)
 export(get_degree_histogram)
 export(get_eccentricity)
-export(get_edge_attr)
+export(get_edge_attrs)
 export(get_edge_df)
 export(get_edges)
-export(get_global_graph_attr)
+export(get_global_graph_attrs)
 export(get_graph_diameter)
 export(get_graph_from_series)
 export(get_graph_name)
 export(get_graph_time)
 export(get_nbrs)
-export(get_node_attr)
+export(get_node_attrs)
 export(get_node_df)
 export(get_nodes)
 export(get_non_nbrs)
@@ -101,8 +101,8 @@ export(renderGrViz)
 export(render_graph)
 export(render_graph_from_series)
 export(replace_in_spec)
-export(rescale_edge_attr_ws)
-export(rescale_node_attr_ws)
+export(rescale_edge_attrs_ws)
+export(rescale_node_attrs_ws)
 export(reverse_edge_direction)
 export(select_edges)
 export(select_edges_by_node_id)
@@ -113,14 +113,14 @@ export(select_nodes_by_degree)
 export(select_nodes_by_id)
 export(select_nodes_in_neighborhood)
 export(series_info)
-export(set_edge_attr)
-export(set_edge_attr_ws)
-export(set_global_graph_attr)
+export(set_edge_attrs)
+export(set_edge_attrs_ws)
+export(set_global_graph_attrs)
 export(set_graph_name)
 export(set_graph_time)
 export(set_graph_undirected)
-export(set_node_attr)
-export(set_node_attr_ws)
+export(set_node_attrs)
+export(set_node_attrs_ws)
 export(subset_series)
 export(to_igraph)
 export(trav_both)
