--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ export(edge_rel)
 export(export_csv)
 export(export_graph)
 export(get_all_connected_nodes)
+export(get_betweenness)
 export(get_cache)
 export(get_common_nbrs)
 export(get_connected_components)
@@ -139,6 +140,7 @@ import(rsvg)
 import(scales)
 importFrom(grDevices,colors)
 importFrom(igraph,graph_from_data_frame)
+importFrom(influenceR,betweenness)
 importFrom(rstudioapi,isAvailable)
 importFrom(stringr,str_count)
 importFrom(stringr,str_detect)
