Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ export(get_betweenness)
 export(get_cache)
 export(get_common_nbrs)
 export(get_connected_components)
+export(get_constraint)
 export(get_degree_histogram)
 export(get_eccentricity)
 export(get_edge_attrs)
@@ -141,6 +142,7 @@ import(scales)
 importFrom(grDevices,colors)
 importFrom(igraph,graph_from_data_frame)
 importFrom(influenceR,betweenness)
+importFrom(influenceR,constraint)
 importFrom(rstudioapi,isAvailable)
 importFrom(stringr,str_count)
 importFrom(stringr,str_detect)
