--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ export(export_csv)
 export(export_graph)
 export(get_all_connected_nodes)
 export(get_betweenness)
+export(get_bridging)
 export(get_cache)
 export(get_common_nbrs)
 export(get_connected_components)
@@ -142,6 +143,7 @@ import(scales)
 importFrom(grDevices,colors)
 importFrom(igraph,graph_from_data_frame)
 importFrom(influenceR,betweenness)
+importFrom(influenceR,bridging)
 importFrom(influenceR,constraint)
 importFrom(rstudioapi,isAvailable)
 importFrom(stringr,str_count)
