Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ export(edge_rel)
 export(export_csv)
 export(export_graph)
 export(get_all_connected_nodes)
+export(get_articulation_points)
 export(get_betweenness)
 export(get_bridging)
 export(get_cache)
@@ -141,6 +142,7 @@ import(htmlwidgets)
 import(rsvg)
 import(scales)
 importFrom(grDevices,colors)
+importFrom(igraph,articulation_points)
 importFrom(igraph,graph_from_data_frame)
 importFrom(influenceR,betweenness)
 importFrom(influenceR,bridging)
