Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -143,6 +143,7 @@ import(rsvg)
 import(scales)
 importFrom(grDevices,colors)
 importFrom(igraph,articulation_points)
+importFrom(igraph,as_ids)
 importFrom(igraph,graph_from_data_frame)
 importFrom(influenceR,betweenness)
 importFrom(influenceR,bridging)
