--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ export(get_articulation_points)
 export(get_betweenness)
 export(get_bridging)
 export(get_cache)
+export(get_closeness)
 export(get_common_nbrs)
 export(get_connected_components)
 export(get_constraint)
@@ -144,6 +145,7 @@ import(scales)
 importFrom(grDevices,colors)
 importFrom(igraph,articulation_points)
 importFrom(igraph,as_ids)
+importFrom(igraph,closeness)
 importFrom(igraph,graph_from_data_frame)
 importFrom(influenceR,betweenness)
 importFrom(influenceR,bridging)
