--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ export(get_non_nbrs)
 export(get_paths)
 export(get_periphery)
 export(get_predecessors)
+export(get_s_connected_components)
 export(get_selection)
 export(get_similar_nbrs)
 export(get_successors)
