Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -147,6 +147,7 @@ importFrom(grDevices,colors)
 importFrom(igraph,articulation_points)
 importFrom(igraph,as_ids)
 importFrom(igraph,closeness)
+importFrom(igraph,components)
 importFrom(igraph,graph_from_data_frame)
 importFrom(influenceR,betweenness)
 importFrom(influenceR,bridging)
