Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -140,6 +140,7 @@ export(trigger_script)
 export(visnetwork)
 export(vivagraph)
 export(x11_hex)
+import(DiagrammeRsvg)
 import(htmlwidgets)
 import(rsvg)
 import(scales)
