--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,6 +40,7 @@ Maintainer: Richard Iannone <riannone@me.com>
 Description: Create graph diagrams and flowcharts using R.
 License: MIT + file LICENSE
 Imports:
+    DiagrammeRsvg (>= 0.1),
     htmlwidgets (>= 0.6),
     igraph (>= 1.0.0),
     influenceR (>= 0.1.0),
