Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -146,13 +146,17 @@ importFrom(influenceR,betweenness)
 importFrom(influenceR,bridging)
 importFrom(influenceR,constraint)
 importFrom(rstudioapi,isAvailable)
+importFrom(stats,na.omit)
 importFrom(stringr,str_count)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
 importFrom(stringr,str_extract_all)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
+importFrom(utils,combn)
+importFrom(utils,installed.packages)
 importFrom(utils,read.csv)
+importFrom(utils,write.csv)
 importFrom(visNetwork,visEdges)
 importFrom(visNetwork,visInteraction)
 importFrom(visNetwork,visLayout)
