--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,7 +52,7 @@ export(get_bridging)
 export(get_cache)
 export(get_closeness)
 export(get_common_nbrs)
-export(get_connected_components)
+export(get_connected_cmpts)
 export(get_constraint)
 export(get_degree_histogram)
 export(get_eccentricity)
@@ -72,7 +72,7 @@ export(get_non_nbrs)
 export(get_paths)
 export(get_periphery)
 export(get_predecessors)
-export(get_s_connected_components)
+export(get_s_connected_cmpts)
 export(get_selection)
 export(get_similar_nbrs)
 export(get_successors)
