--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(clear_selection)
 export(combine_edges)
 export(combine_graphs)
 export(combine_nodes)
+export(copy_node_attrs)
 export(country_graph)
 export(create_edges)
 export(create_graph)
