--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,6 +91,7 @@ export(is_graph_empty)
 export(join_edge_attrs)
 export(join_node_attrs)
 export(mermaid)
+export(mutate_edge_attrs)
 export(mutate_node_attrs)
 export(node_count)
 export(node_info)
