Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(delete_edges_ws)
 export(delete_node)
 export(delete_nodes_ws)
 export(do_dfs)
+export(drop_node_attrs)
 export(edge_count)
 export(edge_info)
 export(edge_present)
