Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -99,6 +99,8 @@ export(node_count)
 export(node_info)
 export(node_present)
 export(node_type)
+export(recode_edge_attrs)
+export(recode_node_attrs)
 export(remove_from_series)
 export(renderDiagrammeR)
 export(renderGrViz)
