--- a/NAMESPACE
+++ b/NAMESPACE
@@ -119,6 +119,7 @@ export(select_nodes_by_degree)
 export(select_nodes_by_id)
 export(select_nodes_in_neighborhood)
 export(series_info)
+export(set_cache)
 export(set_edge_attrs)
 export(set_edge_attrs_ws)
 export(set_global_graph_attrs)
