Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ export(get_graph_diameter)
 export(get_graph_from_series)
 export(get_graph_name)
 export(get_graph_time)
+export(get_jaccard_similarity)
 export(get_nbrs)
 export(get_node_attrs)
 export(get_node_df)
@@ -149,6 +150,7 @@ importFrom(igraph,as_ids)
 importFrom(igraph,closeness)
 importFrom(igraph,components)
 importFrom(igraph,graph_from_data_frame)
+importFrom(igraph,similarity)
 importFrom(influenceR,betweenness)
 importFrom(influenceR,bridging)
 importFrom(influenceR,constraint)
