Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -145,6 +145,7 @@ export(x11_hex)
 import(htmlwidgets)
 import(scales)
 importFrom(grDevices,colors)
+importFrom(igraph,V)
 importFrom(igraph,articulation_points)
 importFrom(igraph,as_ids)
 importFrom(igraph,closeness)
