Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ export(edge_present)
 export(edge_rel)
 export(export_csv)
 export(export_graph)
+export(from_igraph)
 export(get_all_connected_nodes)
 export(get_articulation_points)
 export(get_betweenness)
@@ -59,6 +60,7 @@ export(get_common_nbrs)
 export(get_connected_cmpts)
 export(get_constraint)
 export(get_degree_histogram)
+export(get_dice_similarity)
 export(get_eccentricity)
 export(get_edge_attrs)
 export(get_edge_df)
@@ -145,12 +147,19 @@ export(x11_hex)
 import(htmlwidgets)
 import(scales)
 importFrom(grDevices,colors)
+importFrom(igraph,E)
 importFrom(igraph,V)
 importFrom(igraph,articulation_points)
 importFrom(igraph,as_ids)
 importFrom(igraph,closeness)
 importFrom(igraph,components)
+importFrom(igraph,ends)
+importFrom(igraph,get.edge.attribute)
+importFrom(igraph,get.vertex.attribute)
 importFrom(igraph,graph_from_data_frame)
+importFrom(igraph,is_directed)
+importFrom(igraph,list.edge.attributes)
+importFrom(igraph,list.vertex.attributes)
 importFrom(igraph,similarity)
 importFrom(influenceR,betweenness)
 importFrom(influenceR,bridging)
