Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -105,6 +105,8 @@ export(node_type)
 export(recode_edge_attrs)
 export(recode_node_attrs)
 export(remove_from_series)
+export(rename_edge_attrs)
+export(rename_node_attrs)
 export(renderDiagrammeR)
 export(renderGrViz)
 export(render_graph)
