--- a/NAMESPACE
+++ b/NAMESPACE
@@ -112,6 +112,7 @@ export(renderGrViz)
 export(render_graph)
 export(render_graph_from_series)
 export(replace_in_spec)
+export(rescale_edge_attrs)
 export(rescale_edge_attrs_ws)
 export(rescale_node_attrs)
 export(rescale_node_attrs_ws)
