--- a/NAMESPACE
+++ b/NAMESPACE
@@ -114,7 +114,7 @@ export(render_graph_from_series)
 export(replace_in_spec)
 export(rescale_edge_attrs)
 export(rescale_node_attrs)
-export(reverse_edge_direction)
+export(rev_edge_dir)
 export(select_edges)
 export(select_edges_by_node_id)
 export(select_last_edge)
@@ -155,17 +155,21 @@ importFrom(igraph,articulation_points)
 importFrom(igraph,as_ids)
 importFrom(igraph,closeness)
 importFrom(igraph,components)
+importFrom(igraph,ecount)
+importFrom(igraph,edge_attr)
+importFrom(igraph,edge_attr_names)
 importFrom(igraph,ends)
-importFrom(igraph,get.edge.attribute)
-importFrom(igraph,get.vertex.attribute)
+importFrom(igraph,graph_attr)
+importFrom(igraph,graph_attr_names)
 importFrom(igraph,graph_from_data_frame)
 importFrom(igraph,is_directed)
-importFrom(igraph,list.edge.attributes)
-importFrom(igraph,list.vertex.attributes)
 importFrom(igraph,similarity)
+importFrom(igraph,vertex_attr)
+importFrom(igraph,vertex_attr_names)
 importFrom(influenceR,betweenness)
 importFrom(influenceR,bridging)
 importFrom(influenceR,constraint)
+importFrom(rgexf,write.gexf)
 importFrom(rstudioapi,isAvailable)
 importFrom(stats,na.omit)
 importFrom(stringr,str_count)
