--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: DiagrammeR
 Type: Package
 Title: Create Graph Diagrams and Flowcharts Using R
 Version: 0.8.5
-Date: 2016-07-17
+Date: 2016-08-15
 Authors@R: c(
       person(
         "Knut", "Sveidqvist"
@@ -44,6 +44,7 @@ Imports:
     igraph (>= 1.0.0),
     influenceR (>= 0.1.0),
     rstudioapi (>= 0.6),
+    rgexf (>0.15.3),
     stringr (>= 1.0.0),
     visNetwork (>= 1.0.0),
     scales (>= 0.4.0)
