--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ export(edge_present)
 export(edge_rel)
 export(export_csv)
 export(export_graph)
+export(from_adj_matrix)
 export(from_igraph)
 export(get_all_connected_nodes)
 export(get_articulation_points)
@@ -161,6 +162,7 @@ importFrom(igraph,edge_attr_names)
 importFrom(igraph,ends)
 importFrom(igraph,graph_attr)
 importFrom(igraph,graph_attr_names)
+importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(igraph,graph_from_data_frame)
 importFrom(igraph,is_directed)
 importFrom(igraph,similarity)
