Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ export(get_graph_from_series)
 export(get_graph_name)
 export(get_graph_time)
 export(get_jaccard_similarity)
+export(get_min_spanning_tree)
 export(get_nbrs)
 export(get_node_attrs)
 export(get_node_df)
@@ -165,6 +166,7 @@ importFrom(igraph,graph_attr_names)
 importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(igraph,graph_from_data_frame)
 importFrom(igraph,is_directed)
+importFrom(igraph,mst)
 importFrom(igraph,similarity)
 importFrom(igraph,vertex_attr)
 importFrom(igraph,vertex_attr_names)
