Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,11 @@ export(get_betweenness)
 export(get_bridging)
 export(get_cache)
 export(get_closeness)
+export(get_cmty_edge_btwns)
+export(get_cmty_fast_greedy)
+export(get_cmty_l_eigenvec)
+export(get_cmty_louvain)
+export(get_cmty_walktrap)
 export(get_common_nbrs)
 export(get_connected_cmpts)
 export(get_constraint)
@@ -156,6 +161,11 @@ importFrom(igraph,V)
 importFrom(igraph,articulation_points)
 importFrom(igraph,as_ids)
 importFrom(igraph,closeness)
+importFrom(igraph,cluster_edge_betweenness)
+importFrom(igraph,cluster_fast_greedy)
+importFrom(igraph,cluster_leading_eigen)
+importFrom(igraph,cluster_louvain)
+importFrom(igraph,cluster_walktrap)
 importFrom(igraph,components)
 importFrom(igraph,ecount)
 importFrom(igraph,edge_attr)
