--- a/NAMESPACE
+++ b/NAMESPACE
@@ -176,6 +176,7 @@ importFrom(igraph,graph_attr_names)
 importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(igraph,graph_from_data_frame)
 importFrom(igraph,is_directed)
+importFrom(igraph,membership)
 importFrom(igraph,mst)
 importFrom(igraph,similarity)
 importFrom(igraph,vertex_attr)
