Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(cache_node_attrs)
 export(cache_node_attrs_ws)
 export(cache_node_count_ws)
 export(clear_selection)
+export(colorize_node_attrs)
 export(combine_edges)
 export(combine_graphs)
 export(combine_nodes)
@@ -156,6 +157,7 @@ export(vivagraph)
 export(x11_hex)
 import(htmlwidgets)
 import(scales)
+import(viridis)
 importFrom(grDevices,colors)
 importFrom(igraph,E)
 importFrom(igraph,V)
