Add 'viridis' package to Imports

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,6 +47,7 @@ Imports:
     rstudioapi (>= 0.6),
     rgexf (>= 0.15.3),
     stringr (>= 1.1.0),
+    viridis (>= 0.3.4),
     visNetwork (>= 1.0.0),
     scales (>= 0.4.0)
 URL: https://github.com/rich-iannone/DiagrammeR
