Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(cache_node_attrs)
 export(cache_node_attrs_ws)
 export(cache_node_count_ws)
 export(clear_selection)
+export(colorize_edge_attrs)
 export(colorize_node_attrs)
 export(combine_edges)
 export(combine_graphs)
