Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -159,6 +159,9 @@ export(x11_hex)
 import(htmlwidgets)
 import(scales)
 import(viridis)
+importFrom(dplyr,inner_join)
+importFrom(dplyr,rename)
+importFrom(dplyr,select)
 importFrom(grDevices,colors)
 importFrom(igraph,E)
 importFrom(igraph,V)
