--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: DiagrammeR
 Type: Package
 Title: Create Graph Diagrams and Flowcharts Using R
 Version: 0.8.5
-Date: 2016-08-15
+Date: 2016-08-26
 Authors@R: c(
       person(
         "Knut", "Sveidqvist"
@@ -40,6 +40,7 @@ Maintainer: Richard Iannone <riannone@me.com>
 Description: Create graph diagrams and flowcharts using R.
 License: MIT + file LICENSE
 Imports:
+    dplyr (>= 0.5),
     htmlwidgets (>= 0.6),
     igraph (>= 1.0.0),
     influenceR (>= 0.1.0),
