--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,7 +66,6 @@ export(get_cmty_l_eigenvec)
 export(get_cmty_louvain)
 export(get_cmty_walktrap)
 export(get_common_nbrs)
-export(get_connected_cmpts)
 export(get_constraint)
 export(get_degree_histogram)
 export(get_dice_similarity)
@@ -93,6 +92,7 @@ export(get_s_connected_cmpts)
 export(get_selection)
 export(get_similar_nbrs)
 export(get_successors)
+export(get_w_connected_cmpts)
 export(grViz)
 export(grVizOutput)
 export(graph_count)
@@ -159,6 +159,8 @@ export(x11_hex)
 import(htmlwidgets)
 import(scales)
 import(viridis)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,ends_with)
 importFrom(dplyr,inner_join)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
@@ -194,7 +196,6 @@ importFrom(influenceR,constraint)
 importFrom(magrittr,"%>%")
 importFrom(rgexf,write.gexf)
 importFrom(rstudioapi,isAvailable)
-importFrom(stats,na.omit)
 importFrom(stringr,str_count)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
