Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ export(export_csv)
 export(export_graph)
 export(from_adj_matrix)
 export(from_igraph)
+export(generate_dot)
 export(get_all_connected_nodes)
 export(get_articulation_points)
 export(get_betweenness)
@@ -159,6 +160,7 @@ export(x11_hex)
 import(htmlwidgets)
 import(scales)
 import(viridis)
+importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,ends_with)
 importFrom(dplyr,inner_join)
