Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ export(get_cmty_louvain)
 export(get_cmty_walktrap)
 export(get_common_nbrs)
 export(get_constraint)
+export(get_degree_distribution)
 export(get_degree_histogram)
 export(get_dice_similarity)
 export(get_eccentricity)
@@ -178,6 +179,7 @@ importFrom(igraph,cluster_leading_eigen)
 importFrom(igraph,cluster_louvain)
 importFrom(igraph,cluster_walktrap)
 importFrom(igraph,components)
+importFrom(igraph,degree_distribution)
 importFrom(igraph,ecount)
 importFrom(igraph,edge_attr)
 importFrom(igraph,edge_attr_names)
