Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(copy_node_attrs)
 export(country_graph)
 export(create_edges)
 export(create_graph)
+export(create_node_df)
 export(create_nodes)
 export(create_random_graph)
 export(create_series)
