--- a/NAMESPACE
+++ b/NAMESPACE
@@ -161,6 +161,7 @@ export(vivagraph)
 export(x11_hex)
 import(htmlwidgets)
 import(scales)
+import(tibble)
 import(viridis)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
