Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(combine_nodes)
 export(copy_edge_attrs)
 export(copy_node_attrs)
 export(country_graph)
+export(create_edge_df)
 export(create_edges)
 export(create_graph)
 export(create_node_df)
