Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(colorize_edge_attrs)
 export(colorize_node_attrs)
 export(combine_edges)
 export(combine_graphs)
+export(combine_ndfs)
 export(combine_nodes)
 export(copy_edge_attrs)
 export(copy_node_attrs)
