--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,7 +88,7 @@ export(get_min_spanning_tree)
 export(get_nbrs)
 export(get_node_attrs)
 export(get_node_df)
-export(get_nodes)
+export(get_node_ids)
 export(get_non_nbrs)
 export(get_paths)
 export(get_periphery)
@@ -163,12 +163,13 @@ export(vivagraph)
 export(x11_hex)
 import(htmlwidgets)
 import(scales)
-import(tibble)
 import(viridis)
+importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,ends_with)
 importFrom(dplyr,inner_join)
+importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(grDevices,colors)
