--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(add_edge)
 export(add_edge_df)
 export(add_edges_from_table)
 export(add_edges_w_string)
+export(add_full_graph)
 export(add_n_nodes)
 export(add_n_nodes_ws)
 export(add_node)
