--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,7 +28,7 @@ export(cache_node_count_ws)
 export(clear_selection)
 export(colorize_edge_attrs)
 export(colorize_node_attrs)
-export(combine_edges)
+export(combine_edfs)
 export(combine_graphs)
 export(combine_ndfs)
 export(combine_nodes)
