--- a/NAMESPACE
+++ b/NAMESPACE
@@ -152,12 +152,20 @@ export(set_node_attrs_ws)
 export(subset_series)
 export(to_igraph)
 export(trav_both)
+export(trav_both_edge_v2)
+export(trav_both_v2)
 export(trav_in)
 export(trav_in_edge)
+export(trav_in_edge_v2)
 export(trav_in_node)
+export(trav_in_node_v2)
+export(trav_in_v2)
 export(trav_out)
 export(trav_out_edge)
+export(trav_out_edge_v2)
 export(trav_out_node)
+export(trav_out_node_v2)
+export(trav_out_v2)
 export(trigger_script)
 export(visnetwork)
 export(vivagraph)
@@ -169,6 +177,8 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,ends_with)
+importFrom(dplyr,filter)
+importFrom(dplyr,filter_)
 importFrom(dplyr,inner_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
@@ -213,6 +223,7 @@ importFrom(stringr,str_extract_all)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
+importFrom(tibble,as_tibble)
 importFrom(utils,installed.packages)
 importFrom(utils,read.csv)
 importFrom(utils,write.csv)
