--- a/NAMESPACE
+++ b/NAMESPACE
@@ -152,20 +152,13 @@ export(set_node_attrs_ws)
 export(subset_series)
 export(to_igraph)
 export(trav_both)
-export(trav_both_edge_v2)
-export(trav_both_v2)
+export(trav_both_edge)
 export(trav_in)
 export(trav_in_edge)
-export(trav_in_edge_v2)
 export(trav_in_node)
-export(trav_in_node_v2)
-export(trav_in_v2)
 export(trav_out)
 export(trav_out_edge)
-export(trav_out_edge_v2)
 export(trav_out_node)
-export(trav_out_node_v2)
-export(trav_out_v2)
 export(trigger_script)
 export(visnetwork)
 export(vivagraph)
