--- a/NAMESPACE
+++ b/NAMESPACE
@@ -170,6 +170,7 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,ends_with)
+importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,filter_)
 importFrom(dplyr,inner_join)
