--- a/NAMESPACE
+++ b/NAMESPACE
@@ -173,10 +173,12 @@ importFrom(dplyr,ends_with)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,filter_)
+importFrom(dplyr,full_join)
 importFrom(dplyr,inner_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
+importFrom(dplyr,select_)
 importFrom(grDevices,colors)
 importFrom(igraph,E)
 importFrom(igraph,V)
