--- a/NAMESPACE
+++ b/NAMESPACE
@@ -179,6 +179,7 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,select_)
+importFrom(dplyr,semi_join)
 importFrom(grDevices,colors)
 importFrom(igraph,E)
 importFrom(igraph,V)
