Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -139,6 +139,7 @@ export(select_nodes)
 export(select_nodes_by_degree)
 export(select_nodes_by_id)
 export(select_nodes_in_neighborhood)
+export(select_rev_edges_ws)
 export(series_info)
 export(set_cache)
 export(set_edge_attrs)
