--- a/NAMESPACE
+++ b/NAMESPACE
@@ -166,6 +166,7 @@ export(vivagraph)
 export(x11_hex)
 import(htmlwidgets)
 import(scales)
+import(tibble)
 import(viridis)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
