--- a/NAMESPACE
+++ b/NAMESPACE
@@ -176,6 +176,7 @@ importFrom(dplyr,full_join)
 importFrom(dplyr,inner_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
+importFrom(dplyr,right_join)
 importFrom(dplyr,select)
 importFrom(dplyr,select_)
 importFrom(dplyr,semi_join)
@@ -220,6 +221,7 @@ importFrom(stringr,str_replace)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
 importFrom(tibble,as_tibble)
+importFrom(tibble,tibble)
 importFrom(utils,installed.packages)
 importFrom(utils,write.csv)
 importFrom(visNetwork,visEdges)
