--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(cache_edge_count_ws)
 export(cache_node_attrs)
 export(cache_node_attrs_ws)
 export(cache_node_count_ws)
+export(clear_global_graph_attrs)
 export(clear_selection)
 export(colorize_edge_attrs)
 export(colorize_node_attrs)
@@ -143,6 +144,7 @@ export(set_cache)
 export(set_edge_attrs)
 export(set_edge_attrs_ws)
 export(set_global_graph_attrs)
+export(set_global_graph_attrs_v2)
 export(set_graph_name)
 export(set_graph_time)
 export(set_graph_undirected)
