--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,6 +79,7 @@ export(get_edge_attrs)
 export(get_edge_df)
 export(get_edges)
 export(get_global_graph_attrs)
+export(get_global_graph_attrs_v2)
 export(get_graph_diameter)
 export(get_graph_from_series)
 export(get_graph_name)
