--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(add_edge_df)
 export(add_edges_from_table)
 export(add_edges_w_string)
 export(add_full_graph)
+export(add_global_graph_attrs)
 export(add_n_nodes)
 export(add_n_nodes_ws)
 export(add_node)
@@ -170,6 +171,7 @@ import(viridis)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,coalesce)
 importFrom(dplyr,ends_with)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
@@ -182,6 +184,7 @@ importFrom(dplyr,right_join)
 importFrom(dplyr,select)
 importFrom(dplyr,select_)
 importFrom(dplyr,semi_join)
+importFrom(dplyr,transmute)
 importFrom(grDevices,colors)
 importFrom(igraph,E)
 importFrom(igraph,V)
