Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(create_series)
 export(create_subgraph_ws)
 export(delete_edge)
 export(delete_edges_ws)
+export(delete_global_graph_attrs)
 export(delete_node)
 export(delete_nodes_ws)
 export(do_dfs)
@@ -168,6 +169,7 @@ export(x11_hex)
 import(htmlwidgets)
 import(scales)
 import(viridis)
+importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
