Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -228,6 +228,7 @@ importFrom(stringr,str_split)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(utils,installed.packages)
+importFrom(utils,read.csv)
 importFrom(utils,write.csv)
 importFrom(visNetwork,visEdges)
 importFrom(visNetwork,visInteraction)
