--- a/NAMESPACE
+++ b/NAMESPACE
@@ -178,6 +178,7 @@ importFrom(dplyr,filter)
 importFrom(dplyr,filter_)
 importFrom(dplyr,full_join)
 importFrom(dplyr,inner_join)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
 importFrom(dplyr,right_join)
@@ -218,6 +219,7 @@ importFrom(influenceR,constraint)
 importFrom(magrittr,"%>%")
 importFrom(rgexf,write.gexf)
 importFrom(rstudioapi,isAvailable)
+importFrom(stats,setNames)
 importFrom(stringr,str_count)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
