--- a/NAMESPACE
+++ b/NAMESPACE
@@ -150,6 +150,7 @@ export(set_graph_time)
 export(set_graph_undirected)
 export(set_node_attrs)
 export(set_node_attrs_ws)
+export(set_node_position)
 export(subset_series)
 export(to_igraph)
 export(trav_both)
