Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -181,6 +181,7 @@ importFrom(dplyr,full_join)
 importFrom(dplyr,inner_join)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_)
 importFrom(dplyr,rename)
 importFrom(dplyr,right_join)
 importFrom(dplyr,select)
