Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -172,6 +172,7 @@ importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,case_when)
 importFrom(dplyr,coalesce)
 importFrom(dplyr,ends_with)
 importFrom(dplyr,everything)
