--- a/NAMESPACE
+++ b/NAMESPACE
@@ -174,6 +174,7 @@ importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,coalesce)
+importFrom(dplyr,distinct)
 importFrom(dplyr,ends_with)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
@@ -220,6 +221,7 @@ importFrom(influenceR,betweenness)
 importFrom(influenceR,bridging)
 importFrom(influenceR,constraint)
 importFrom(magrittr,"%>%")
+importFrom(magrittr,not)
 importFrom(rgexf,write.gexf)
 importFrom(rstudioapi,isAvailable)
 importFrom(stats,setNames)
