Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -111,6 +111,7 @@ export(is_graph_directed)
 export(is_graph_empty)
 export(join_edge_attrs)
 export(join_node_attrs)
+export(layout_nodes_w_string)
 export(mermaid)
 export(mutate_edge_attrs)
 export(mutate_node_attrs)
@@ -170,6 +171,7 @@ import(scales)
 import(viridis)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
+importFrom(dplyr,arrange_)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
