--- a/NAMESPACE
+++ b/NAMESPACE
@@ -119,6 +119,7 @@ export(node_count)
 export(node_info)
 export(node_present)
 export(node_type)
+export(nudge_node_positions_ws)
 export(recode_edge_attrs)
 export(recode_node_attrs)
 export(remove_from_series)
