--- a/NAMESPACE
+++ b/NAMESPACE
@@ -206,6 +206,7 @@ importFrom(igraph,cluster_louvain)
 importFrom(igraph,cluster_walktrap)
 importFrom(igraph,components)
 importFrom(igraph,degree_distribution)
+importFrom(igraph,dfs)
 importFrom(igraph,ecount)
 importFrom(igraph,edge_attr)
 importFrom(igraph,edge_attr_names)
