--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(delete_edges_ws)
 export(delete_global_graph_attrs)
 export(delete_node)
 export(delete_nodes_ws)
+export(do_bfs)
 export(do_dfs)
 export(drop_edge_attrs)
 export(drop_node_attrs)
@@ -198,6 +199,7 @@ importFrom(igraph,E)
 importFrom(igraph,V)
 importFrom(igraph,articulation_points)
 importFrom(igraph,as_ids)
+importFrom(igraph,bfs)
 importFrom(igraph,closeness)
 importFrom(igraph,cluster_edge_betweenness)
 importFrom(igraph,cluster_fast_greedy)
