--- a/NAMESPACE
+++ b/NAMESPACE
@@ -151,6 +151,7 @@ export(set_global_graph_attrs)
 export(set_graph_name)
 export(set_graph_time)
 export(set_graph_undirected)
+export(set_node_attr_to_display)
 export(set_node_attrs)
 export(set_node_attrs_ws)
 export(set_node_position)
