Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -169,6 +169,7 @@ export(trigger_script)
 export(visnetwork)
 export(vivagraph)
 export(x11_hex)
+import(RColorBrewer)
 import(htmlwidgets)
 import(scales)
 import(viridis)
