--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: DiagrammeR
 Type: Package
 Title: Create Graph Diagrams and Flowcharts Using R
 Version: 0.8.5
-Date: 2016-09-22
+Date: 2016-11-14
 Authors@R: c(
       person(
         "Knut", "Sveidqvist"
@@ -45,6 +45,7 @@ Imports:
     igraph (>= 1.0.1),
     influenceR (>= 0.1.0),
     magrittr (>= 1.5),
+    RColorBrewer (>= 1.1-2),
     rstudioapi (>= 0.6),
     rgexf (>= 0.15.3),
     stringr (>= 1.1.0),
