--- a/NAMESPACE
+++ b/NAMESPACE
@@ -191,6 +191,7 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_)
 importFrom(dplyr,rename)
 importFrom(dplyr,right_join)
+importFrom(dplyr,sample_n)
 importFrom(dplyr,select)
 importFrom(dplyr,select_)
 importFrom(dplyr,semi_join)
@@ -241,6 +242,7 @@ importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
+importFrom(utils,combn)
 importFrom(utils,installed.packages)
 importFrom(utils,read.csv)
 importFrom(utils,write.csv)
