--- a/NAMESPACE
+++ b/NAMESPACE
@@ -190,6 +190,7 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_)
 importFrom(dplyr,rename)
+importFrom(dplyr,rename_)
 importFrom(dplyr,right_join)
 importFrom(dplyr,sample_n)
 importFrom(dplyr,select)
