Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,7 @@ export(get_dice_similarity)
 export(get_eccentricity)
 export(get_edge_attrs)
 export(get_edge_df)
+export(get_edge_ids)
 export(get_edges)
 export(get_global_graph_attrs)
 export(get_graph_diameter)
