--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(add_n_nodes)
 export(add_n_nodes_ws)
 export(add_node)
 export(add_node_df)
+export(add_nodes_from_df_cols)
 export(add_nodes_from_table)
 export(add_path)
 export(add_prism)
